@@ -8490,6 +8490,8 @@ build_asm_expr (location_t loc, tree string, tree outputs, tree inputs,
     {
       tree output = TREE_VALUE (tail);
 
+      output = c_fully_fold (output, false, NULL);
+
       /* ??? Really, this should not be here.  Users should be using a
 	 proper lvalue, dammit.  But there's a long history of using casts
 	 in the output operands.  In cases like longlong.h, this becomes a
@@ -8547,16 +8549,27 @@ build_asm_expr (location_t loc, tree string, tree outputs, tree inputs,
 	     mark it addressable.  */
 	  if (!allows_reg && allows_mem)
 	    {
+	      input = c_fully_fold (input, false, NULL);
+
 	      /* Strip the nops as we allow this case.  FIXME, this really
 		 should be rejected or made deprecated.  */
 	      STRIP_NOPS (input);
 	      if (!c_mark_addressable (input))
 		input = error_mark_node;
 	    }
-	  else if (input != error_mark_node && VOID_TYPE_P (TREE_TYPE (input)))
+	  else
 	    {
-	      error_at (loc, "invalid use of void expression");
-	      input = error_mark_node;
+	      struct c_expr expr;
+	      memset (&expr, 0, sizeof (expr));
+	      expr.value = input;
+	      expr = default_function_array_conversion (loc, expr);
+	      input = c_fully_fold (expr.value, false, NULL);
+
+	      if (input != error_mark_node && VOID_TYPE_P (TREE_TYPE (input)))
+		{
+		  error_at (loc, "invalid use of void expression");
+		  input = error_mark_node;
+		}
 	    }
 	}
       else
