@@ -270,6 +270,11 @@
 
 2012-12-20  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/55619
+	* c-c++-common/pr55619.c: New test.
+
+2012-12-20  Jakub Jelinek  <jakub@redhat.com>
+
 	PR middle-end/55750
 	* gcc.c-torture/execute/pr55750.c: New test.
 
